# Operating-Systems

./: .gitignore  main.cpp
lab1/: CMakeLists.txt  linux_build.sh  main.cpp  windows_build.cmd
lab2/: CMakeLists.txt  main.cpp  my_lib.cpp  my_lib.hpp
lab3/: CMakeLists.txt  main.cpp  my_shmem.hpp  my_thread.hpp  programm.cpp  programm.hpp
lab4/: CMakeLists.txt  help_programm.cpp  main.cpp  temp_generator.cpp
lab5/: CMakeLists.txt  data.html  data_graphic.html  help_programm.cpp  help_programm.hpp  index.html  main.cpp  my_serial.hpp  my_thread.hpp  server.cpp  temp_generator.cpp
lab6/build-client_GUI-Desktop_Qt_6_5_0_shared_MinGW_w64_UCRT64_MSYS2-Debug/: CMakeCache.txt.prev  Makefile  cmake_install.cmake
lab6/build-client_GUI-Desktop_Qt_6_5_0_shared_MinGW_w64_UCRT64_MSYS2-Debug/.cmake/api/v1/reply/: codemodel-v2-c7b728fbd5e401faadb3.json  target-client_GUI_autogen-Debug-41dec82e2cdfca5bf7b6.json
lab6/build-client_GUI-Desktop_Qt_6_5_0_shared_MinGW_w64_UCRT64_MSYS2-Debug/.cmake/api/v1/reply.prev/: cache-v2-c3cc0d3884b38668c834.json  cmakeFiles-v1-7c0f151c2d14754908e1.json  directory-.-Debug-6e7105cb9fe9ef4b27b5.json  index-2025-01-20T03-51-11-0271.json  target-client_GUI-Debug-5b06be422e81dc405bb0.json  target-client_GUI_autogen_timestamp_deps-Debug-b958c0015569268dd592.json
lab6/build-client_GUI-Desktop_Qt_6_5_0_shared_MinGW_w64_UCRT64_MSYS2-Debug/.qt/: QtDeploySupport.cmake
lab6/build-client_GUI-Desktop_Qt_6_5_0_shared_MinGW_w64_UCRT64_MSYS2-Debug/client_GUI_autogen/: deps  moc_predefs.h
lab6/build-client_GUI-Desktop_Qt_6_5_0_shared_MinGW_w64_UCRT64_MSYS2-Debug/client_GUI_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_qcustomplot.cpp  moc_qcustomplot.cpp.d
lab6/build-client_GUI-Desktop_Qt_6_5_0_shared_MinGW_w64_UCRT64_MSYS2-Debug/client_GUI_autogen/include/: ui_mainwindow.h
lab6/client_GUI/: CMakeLists.txt  client.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
